# Iceflix

./: AdminClient.py  Client.py  Pruebas.py  README.md  ServerPrueba.py  hola.txt  pruebas.py  run_client  run_icestorm  run_service  server.config  setup.cfg  setup.py
configs/: authenticator.config  catalog.config  client.config  fileservice.config  icestorm.config  icestorm.icebox.config  main.config
iceflix/: AdminClient.py  Client.py  iceflix.ice  main.py
iceflix_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
