[metadata]
name = IceFlix Template
version = 1.0.0
description = Template package to use in the IceFlix laboratory

[options]
packages = find:
install_requires =
    zeroc-ice>=3.7.0

[options.package_data]
* = *.ice

[options.entry_points]
# Keep only the one you need, remove the rest
console_scripts =
    iceflix-main = iceflix.cli:main_service
    iceflix-authenticator = iceflix.cli:authentication_service
    iceflix-catalog = iceflix.cli:catalog_service
    iceflix-streamprovider = iceflix.cli:streamprovider_service
    iceflix = iceflix.cli:client
